# HybridConductor_v7

./: .gitignore  CHANGELOG.md  HybridConductor.spec  README.md  build_exe.py  cartographer.py  context_fetcher.py  diagnostics.py  hello.py  loop_guardian.py  main.py  notifications.yml.example  notifier.py  orchestrator.py  playwright.config.js  pyproject.toml  requirements.txt  run_streamlined.py  setup.py  start_app.py  start_gui.py  task_15efe5f7.py  task_2f4a4b1a.py  task_487e6010.py  task_4a935c8f.py  task_7053a8d3.py  task_afc40ab6.py  test_discord_connection.py  test_log.txt  test_telegram_connection.py  tui.py  worker.py
.claude/: hookify.documentation-guardian.local.md
backend/: openhands_runner.py  package-lock.json  package.json  tailwind.config.js  vite.config.js
backend/dashboard/: app.py
backend/playwright-report/: index.html
backend/scripts/: capture_screenshot.js
backend/static/: index.html
backend/tests/: console.spec.js  entry.spec.js  progress.spec.js  responsive.spec.js  settings.spec.js
config/: default.yml
dashboard/: app.py  test_app.py
dashboard/templates/: config.html  history.html  monitor.html
docs/: gemini_auth_guide.md.resolved  lessons_learnt.md  loop-detection.md
docs/READMEs/: 1.mermaid  (+8 more)
frontend/: index.html
hybridconductor/: __init__.py  config.py  logger.py
logs/: activity.db
presets/: debug.yml  fast_track.yml  full.yml  streamlined.yml  tdd.yml
providers/: __init__.py  base.py  factory.py  gemini.py  openai.py
ralph/: implementation_master.md
state/: codebase_map.md  inbox.md  plan.md  spec.md
(+62 files in other folders)
