[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-conductor"
version = "8.0.3"
authors = [{ name = "Hybrid Conductor Team" }]
description = "Deterministic Windows-native AI Orchestration Framework"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "pywebview>=5.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pyinstaller>=6.3.0"]

[project.urls]
"Homepage" = "https://github.com/Draculabo/AntigravityManager"
"Bug Tracker" = "https://github.com/Draculabo/AntigravityManager/issues"

[project.scripts]
hybrid-conductor = "orchestrator:main"
